--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,31 @@
-body{
-    background: grey;
-    font-style: verdana;
+body {
+    margin: 0;
+}
+
+.list-group{
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    width: 25%;
+    background-color: #f1f1f1;
+    position: fixed;
+    height: 100%;
+    overflow: auto;
+}
+
+.list-group-item {
+    display: block;
+    color: #000;
+    padding: 8px 16px;
+    text-decoration: none;
+}
+
+.list-group-item.active {
+    background-color: #4CAF50;
+    color: white;
+}
+
+.list-group-item:hover:not(.active) {
+    background-color: #555;
+    color: white;
 }
